--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Catlopedia</string>
+    <string name="load_more">Load More</string>
+    <string name="connect_to_internet">Please connect to Internet</string>
+
 </resources>
